ajout de la route et du fil ariane page dynamique

--- a/application/views/scripts/utilisateurs/index.phtml
+++ b/application/views/scripts/utilisateurs/index.phtml
@@ -66,6 +66,7 @@ echo $this->placeholder('sidebar');
 				?>
 				<?php
 					echo "<a href=".$this->url(array('controller' => 'formation', 'action' => 'gererformation'), 'default', true).">Administrer les formations</a><br />";
+					echo "<a href='/pages-dynamique'>Administrer les pages dynamiques</a><br />";
 				?>	       
 	       </div>
 		</div> <!-- autre_action -->
