modification lien formation disponible

--- a/application/views/scripts/formation/geteventdata.phtml
+++ b/application/views/scripts/formation/geteventdata.phtml
@@ -13,4 +13,6 @@
 	<p>Date : <?php echo $this->date ?></p><br />
 	<p>Durée : <?php echo $this->duree ?></p><br />
 	<p>Formation : <?php echo $this->formation ?></p><br />
+	J'ai effectué cette formation :<br /> 
+	<button class="add">Oui</button><button>Non</button>
 </div>
