--- a/application/views/scripts/utilisateurs/index.phtml
+++ b/application/views/scripts/utilisateurs/index.phtml
@@ -90,7 +90,7 @@ echo $this->placeholder('sidebar');
         <div class="block-top-formateur block-right-formateur">
     	<?php
     		if($this->voir_formation_dispo){
-				echo "<br /><a href='formations-disponible?sansFormateur=true'><img src='/images/livres-agenda-education-bibliotheque-icone-5155-48.png' class='img-left' /> Formations disponibles (".$this->nombre_formation.")</a>";
+				echo "<br /><a href='formations-disponibles?sansFormateur=true'><img src='/images/livres-agenda-education-bibliotheque-icone-5155-48.png' class='img-left' /> Formations disponibles (".$this->nombre_formation.")</a>";
 			}
 		?>
         </div>
