--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -25,6 +25,7 @@ $user = new Zend_Session_Namespace('user');?>
 		<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/fullcalendar.js"></script>
 		<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/ckeditor/ckeditor.js"></script> 
 		<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/ckeditor/adapters/jquery.js"></script> 
+		<script type="text/javascript" src="<?php APPLICATION_PATH?>/js/blockUI.js"></script> 
 		<script src="<?php APPLICATION_PATH?>/js/cufon-yui.js" type="text/javascript"></script> 
 		<script src="<?php APPLICATION_PATH?>/js/cufon-replace.js" type="text/javascript"></script> 
 		<script src="<?php APPLICATION_PATH?>/js/Myriad_Pro_400.font.js" type="text/javascript"></script>
