ajout lien index

--- a/application/views/scripts/utilisateurs/sidebar.phtml
+++ b/application/views/scripts/utilisateurs/sidebar.phtml
@@ -49,6 +49,7 @@ $this->placeholder('sidebar')->captureStart();
 				<ul>
 					<li><a href='/modification-informations-personnelles'>Voir mon profil</a></li>
 					<li><a href='/changer-mot-de-passe'>Changer mon mot de passe</a></li>
+					<li><a href='/document'>Documents</a></li>
 				</ul>
 			<?php
 			}
