ajout lien index

--- a/application/views/scripts/document/index.phtml
+++ b/application/views/scripts/document/index.phtml
@@ -59,7 +59,7 @@
 <script type="text/javascript">
 	function formUploadCallback(result, type) {
 		if(result == 1){
-			//location.reload();
+			location.reload();
 		}
 	}
 </script>
